// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectedLandmarksContainer should match the snapshot when there are no visited locations 1`] = `
<Component
  style={
    Object {
      "display": "flex",
      "flex": 3,
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1.5,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 18,
          "fontWeight": "600",
          "paddingBottom": "3%",
        }
      }
    >
      COLLECTED LANDMARKS
    </Component>
    <Themed.Icon
      color="white"
      name="university"
      size={40}
      type="font-awesome"
    />
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 3,
      }
    }
  >
    <ScrollViewMock>
      <Component
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": 3,
            "flexDirection": "column",
            "justifyContent": "space-between",
            "padding": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "fontWeight": "bold",
              "paddingTop": 30,
            }
          }
        >
          You have 0 collected landmarks
        </Component>
        <Themed.Icon
          color="#745f57"
          name="map"
          padding={30}
          size={50}
          type="font-awesome"
        />
        <Component>
          Get within 1 mile of a landmark to snap a photo and add it to your landmarks collection
        </Component>
      </Component>
    </ScrollViewMock>
  </Component>
</Component>
`;

exports[`CollectedLandmarksContainer should match the snapshot when there are visited locations 1`] = `
<Component
  style={
    Object {
      "display": "flex",
      "flex": 3,
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1.5,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 18,
          "fontWeight": "600",
          "paddingBottom": "3%",
        }
      }
    >
      COLLECTED LANDMARKS
    </Component>
    <Themed.Icon
      color="white"
      name="university"
      size={40}
      type="font-awesome"
    />
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 3,
      }
    }
  >
    <ScrollViewMock>
      <Landmark
        key="6"
        landmark={
          Object {
            "description": "Beautiful Park",
            "landmark_id": 6,
            "lat": 39.72386,
            "lon": -104.88715,
            "name": "Great Lawn Park",
            "photo_url": "www.myimage.com/2",
          }
        }
      />
      <Landmark
        key="3"
        landmark={
          Object {
            "description": "Beautiful Park",
            "landmark_id": 3,
            "lat": 39.7159,
            "lon": -104.90379,
            "name": "Buckley Annex",
            "photo_url": "www.myimage.com",
          }
        }
      />
    </ScrollViewMock>
  </Component>
</Component>
`;
